# microservices

./: .bazelrc  .cirrus.yml  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  build.gradle  dependencies.json  dependencies_jvm.json  gradle.properties  serve.json  settings.gradle
.github/workflows/: tests.yml
gradle/wrapper/: gradle-wrapper.properties
services/: make_a_service.sh
services/add/api/: build.gradle
services/add/api/src/main/proto/: add_service.proto
services/add/client/: build.gradle
services/add/client/src/main/kotlin/com/fkorotkov/add/: AddServiceClient.kt
services/add/client/src/main/kotlin/com/fkorotkov/add/client/: AddServiceClient.kt
services/add/client/src/main/kotlin/com/fkorotkov/add/impl/: AddServiceClientImpl.kt
services/add/config/: build.gradle
services/add/config/src/main/kotlin/com/fkorotkov/add/configuration/: AddServiceConfiguration.kt  BUILD.bazel
services/add/impl/: build.gradle
services/add/impl/src/main/kotlin/com/fkorotkov/add/: AddServiceImpl.kt  BUILD.bazel
services/add/test-client/: build.gradle
services/add/test-client/src/main/kotlin/com/fkorotkov/add/: TestAddServiceClientProvider.kt
services/add/test-client/src/main/kotlin/com/fkorotkov/add/test/: BUILD.bazel  TestAddServiceClientProvider.kt
services/add/test-client/src/test/kotlin/com/fkorotkov/add/: TestAddServiceProviderTest.kt
services/add/test-client/src/test/kotlin/com/fkorotkov/add/test/: BUILD.bazel  TestAddServiceProviderTest.kt
services/calculator/api/: build.gradle
services/calculator/api/src/main/proto/: calculator_service.proto
services/calculator/client/: build.gradle
services/calculator/client/src/main/kotlin/com/fkorotkov/calculator/: CalculatorServiceClient.kt
services/calculator/client/src/main/kotlin/com/fkorotkov/calculator/client/: CalculatorServiceClient.kt
services/calculator/client/src/main/kotlin/com/fkorotkov/calculator/impl/: CalculatorServiceClientImpl.kt
services/calculator/config/: build.gradle
services/calculator/config/src/main/kotlin/com/fkorotkov/calculator/configuration/: BUILD.bazel  CalculatorServiceConfiguration.kt
services/calculator/impl/: build.gradle
services/calculator/impl/src/main/kotlin/com/fkorotkov/calculator/: BUILD.bazel  CalculatorServiceImpl.kt
services/calculator/impl/src/main/kotlin/com/fkorotkov/calculator/evaluator/: AsyncEvaluator.kt  BUILD.bazel  Operators.kt
services/calculator/test-client/: build.gradle
services/calculator/test-client/src/main/kotlin/com/fkorotkov/calculator/: TestCalculatorServiceClientProvider.kt  TestCalculatorServiceProvider.kt
services/calculator/test-client/src/main/kotlin/com/fkorotkov/calculator/test/: BUILD.bazel  TestCalculatorServiceProvider.kt
services/calculator/test-client/src/test/kotlin/com/fkorotkov/calculator/: KotlinConfDemoTest.kt  TestCalculatorServiceProviderTest.kt
services/calculator/test-client/src/test/kotlin/com/fkorotkov/calculator/test/: BUILD.bazel  KotlinConfDemoTest.kt  TestCalculatorServiceProviderTest.kt
services/example/api/: build.gradle
services/example/api/src/main/proto/: example_service.proto
services/example/client/: build.gradle
services/example/client/src/main/kotlin/com/fkorotkov/example/: ExampleServiceClient.kt
services/example/client/src/main/kotlin/com/fkorotkov/example/client/: ExampleServiceClient.kt
services/example/client/src/main/kotlin/com/fkorotkov/example/impl/: ExampleServiceClientImpl.kt
services/example/config/: build.gradle
services/example/config/src/main/kotlin/com/fkorotkov/example/configuration/: BUILD.bazel  ExampleServiceConfiguration.kt
services/example/impl/: build.gradle
services/example/impl/src/main/kotlin/com/fkorotkov/example/: BUILD.bazel  ExampleServiceImpl.kt
services/example/test-client/: build.gradle
services/example/test-client/src/main/kotlin/com/fkorotkov/example/: TestExampleServiceClientProvider.kt  TestExampleServiceProvider.kt
services/example/test-client/src/main/kotlin/com/fkorotkov/example/test/: BUILD.bazel  TestExampleServiceProvider.kt
services/multiply/api/src/main/proto/: BUILD.bazel  multiply_service.proto
services/multiply/client/: build.gradle
services/multiply/client/src/main/kotlin/com/fkorotkov/multiply/: MultiplyServiceClient.kt
services/multiply/config/: build.gradle
services/multiply/config/src/main/kotlin/com/fkorotkov/multiply/configuration/: BUILD.bazel  MultiplyServiceConfiguration.kt
services/multiply/impl/: build.gradle
services/multiply/impl/src/main/kotlin/com/fkorotkov/multiply/: BUILD.bazel  MultiplyServiceImpl.kt
services/multiply/test-client/: build.gradle
services/multiply/test-client/src/main/kotlin/com/fkorotkov/multiply/: TestMultiplyServiceProvider.kt
services/multiply/test-client/src/test/kotlin/com/fkorotkov/multiply/: TestMultiplyServiceProviderTest.kt
services/multiply/test-client/src/test/kotlin/com/fkorotkov/multiply/test/: BUILD.bazel  TestMultiplyServiceProviderTest.kt
services/subtract/api/: build.gradle
services/subtract/api/src/main/proto/: subtract_service.proto
services/subtract/client/: build.gradle
services/subtract/client/src/main/kotlin/com/fkorotkov/subtract/: SubtractServiceClient.kt
services/subtract/client/src/main/kotlin/com/fkorotkov/subtract/client/impl/: BUILD.bazel  SubtractServiceClientImpl.kt
services/subtract/config/: build.gradle
services/subtract/config/src/main/kotlin/com/fkorotkov/subtract/configuration/: BUILD.bazel  SubtractServiceConfiguration.kt
services/subtract/impl/: build.gradle
services/subtract/impl/src/main/kotlin/com/fkorotkov/subtract/: BUILD.bazel  SubtractServiceImpl.kt
services/subtract/test-client/: build.gradle
services/subtract/test-client/src/main/kotlin/com/fkorotkov/subtract/: TestSubtractServiceProvider.kt
services/subtract/test-client/src/test/kotlin/com/fkorotkov/subtract/: TestSubtractServiceProviderTest.kt
services/subtract/test-client/src/test/kotlin/com/fkorotkov/subtract/test/: BUILD.bazel  TestSubtractServiceProviderTest.kt
(+17 files in other folders)
