# GENERATED
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
  name = "kt",
  srcs = glob(["*.kt"]),
  visibility = ["//visibility:public"],
  deps = [
    "//services/add/client/src/main/kotlin/com/fkorotkov/add/client:kt",
    "//services/add/config/src/main/kotlin/com/fkorotkov/add/configuration:kt",
    "//services/calculator/api/src/main/proto:kt_proto",
    "//services/calculator/config/src/main/kotlin/com/fkorotkov/calculator/configuration:kt",
    "//services/calculator/impl/src/main/kotlin/com/fkorotkov/calculator/evaluator:kt",
    "//services/multiply/client/src/main/kotlin/com/fkorotkov/multiply/client:kt",
    "//services/multiply/config/src/main/kotlin/com/fkorotkov/multiply/configuration:kt",
    "//services/subtract/client/src/main/kotlin/com/fkorotkov/subtract/client:kt",
    "//services/subtract/config/src/main/kotlin/com/fkorotkov/subtract/configuration:kt",
    "@maven//:io_grpc_grpc_core",
    "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
  ],
)