# GENERATED
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
  name = "kt",
  srcs = glob(["*.kt"]),
  visibility = ["//visibility:public"],
  deps = [
    "//services/multiply/api/src/main/proto:kt_proto",
    "//services/multiply/config/src/main/kotlin/com/fkorotkov/multiply/configuration:kt",
    "@maven//:io_grpc_grpc_core",
  ],
)