# GENERATED
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
  name = "kt",
  srcs = glob(["*.kt"]),
  visibility = ["//visibility:public"],
  deps = [
    "//services/add/api/src/main/proto:kt_proto",
    "//services/add/client/src/main/kotlin/com/fkorotkov/add/client/impl:kt",
    "//services/add/client/src/main/kotlin/com/fkorotkov/add/client:kt",
    "@maven//:io_grpc_grpc_core",
  ],
)