# GENERATED
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
  name = "kt",
  srcs = glob(["*.kt"]),
  visibility = ["//visibility:public"],
  deps = [
    "//services/calculator/api/src/main/proto:kt_proto",
    "//services/calculator/client/src/main/kotlin/com/fkorotkov/calculator/client/impl:kt",
    "//services/calculator/client/src/main/kotlin/com/fkorotkov/calculator/client:kt",
    "@maven//:io_grpc_grpc_core",
  ],
)