# GENERATED
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
  name = "kt",
  srcs = glob(["*.kt"]),
  visibility = ["//visibility:public"],
  deps = [
    "//services/add/client/src/main/kotlin/com/fkorotkov/add/client:kt",
    "//services/multiply/client/src/main/kotlin/com/fkorotkov/multiply/client:kt",
    "//services/subtract/client/src/main/kotlin/com/fkorotkov/subtract/client:kt",
    "@maven//:com_fathzer_javaluator",
    "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
  ],
)