# GENERATED
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
  name = "kt",
  srcs = glob(["*.kt"]),
  visibility = ["//visibility:public"],
  deps = [
    "//services/add/client/src/main/kotlin/com/fkorotkov/add/client:kt",
    "//services/calculator/api/src/main/proto:kt_proto",
    "//services/calculator/client/src/main/kotlin/com/fkorotkov/calculator/client/impl:kt",
    "//services/calculator/client/src/main/kotlin/com/fkorotkov/calculator/client:kt",
    "//services/calculator/impl/src/main/kotlin/com/fkorotkov/calculator:kt",
    "//services/multiply/client/src/main/kotlin/com/fkorotkov/multiply/client:kt",
    "//services/subtract/client/src/main/kotlin/com/fkorotkov/subtract/client:kt",
    "@maven//:io_grpc_grpc_core",
  ],
)