# GENERATED
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
  name = "kt",
  srcs = glob(["*.kt"]),
  visibility = ["//visibility:public"],
  deps = [
    "//services/example/api/src/main/proto:kt_proto",
    "//services/example/client/src/main/kotlin/com/fkorotkov/example/client/impl:kt",
    "//services/example/client/src/main/kotlin/com/fkorotkov/example/client:kt",
    "@maven//:io_grpc_grpc_core",
  ],
)