# GENERATED
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
  name = "lib",
  srcs = glob(["*.kt"]),
  visibility = ["//visibility:public"],
  deps = [
    "//services/multiply/test-client/src/main/kotlin/com/fkorotkov/multiply/test:kt",
    "@maven//:junit_junit",
    "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
  ],
)

kt_jvm_test(
  name = "TestMultiplyServiceProviderTest",
  srcs = ["TestMultiplyServiceProviderTest.kt"],
  test_class = "com.fkorotkov.multiply.test.TestMultiplyServiceProviderTest",
  visibility = ["//visibility:public"],
  deps = [ ":lib" ],
)