# GENERATED
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
  name = "lib",
  srcs = glob(["*.kt"]),
  visibility = ["//visibility:public"],
  deps = [
    "//services/subtract/test-client/src/main/kotlin/com/fkorotkov/subtract/test:kt",
    "@maven//:junit_junit",
    "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
  ],
)

kt_jvm_test(
  name = "TestSubtractServiceProviderTest",
  srcs = ["TestSubtractServiceProviderTest.kt"],
  test_class = "com.fkorotkov.subtract.test.TestSubtractServiceProviderTest",
  visibility = ["//visibility:public"],
  deps = [ ":lib" ],
)